--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-core": "^6.26.0",
     "babel-env": "^2.4.1",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.23.6",
     "chalk": "^2.3.0",
     "css-loader": "^0.28.9",
