--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-static-site-template",
   "version": "1.0.0",
   "author": "gunubin",
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
@@ -11,12 +12,14 @@
     "browser-sync": "^2.23.6",
     "chalk": "^2.3.0",
     "css-loader": "^0.28.9",
+    "ejs-cli": "^2.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "fs-extra": "^5.0.0",
     "imagemin": "^5.3.1",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.14.11",
     "npm-run-all": "^4.1.2",
     "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
@@ -27,9 +30,12 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "npm-run-all build:*",
+    "build": "npm-run-all clean build:*",
+    "build:ejs": "ejs-cli --base-dir src/ '**/!(_*).ejs' --out ./build/",
     "build:image": "BABEL_ENV=production node scripts/image",
     "build:js": "BABEL_ENV=production node scripts/build",
-    "start": "node scripts/webpack & node scripts/server"
+    "clean": "node scripts/clean",
+    "start": "node scripts/webpack & node scripts/server & npm-run-all watch:*",
+    "watch:ejs": "nodemon -e ejs -x 'npm run build:ejs'"
   }
 }
